--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "airbnb",
   "version": "0.1.0",
   "private": true,
+  "homepage": "./",
   "dependencies": {
     "@emotion/react": "^11.10.8",
     "@emotion/styled": "^11.10.8",
